syntax = "proto3";
package fx.gravity.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/functionx/fx-core/x/gravity/types";

// Deprecated after upgrade v3
message BridgeValidator {
  uint64 power = 1;
  string eth_address = 2;
}

// Deprecated after upgrade v3
message Valset {
  uint64 nonce = 1;
  repeated BridgeValidator members = 2;
  uint64 height = 3;
}

// Deprecated after upgrade v3
message LastObservedEthereumBlockHeight {
  uint64 fx_block_height = 1;
  uint64 eth_block_height = 2;
}

// Deprecated after upgrade v3
message ERC20ToDenom {
  string erc20 = 1;
  string denom = 2;
}

// Deprecated after upgrade v3
message ERC20Token {
  string contract = 1;
  string amount = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

// Deprecated after upgrade v3
message Attestation {
  bool observed = 1;
  repeated string votes = 2;
  uint64 height = 3;
  google.protobuf.Any claim = 4;
}

// Deprecated after upgrade v3
message OutgoingTxBatch {
  uint64 batch_nonce = 1;
  uint64 batch_timeout = 2;
  repeated OutgoingTransferTx transactions = 3;
  string token_contract = 4;
  uint64 block = 5;
  string feeReceive = 6;
}

// Deprecated after upgrade v3
message OutgoingTransferTx {
  uint64 id = 1;
  string sender = 2;
  string dest_address = 3;
  ERC20Token erc20_token = 4;
  ERC20Token erc20_fee = 5;
}

// Deprecated after upgrade v3
message BatchFees {
  string token_contract = 1;
  string total_fees = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  uint64 total_txs = 3;
  string total_amount = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

// Deprecated after upgrade v3
message MinBatchFee {
  string token_contract = 1;
  string baseFee = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

// Deprecated after upgrade v3
enum ClaimType {
  option (gogoproto.goproto_enum_prefix) = false;

  CLAIM_TYPE_UNSPECIFIED = 0;
  CLAIM_TYPE_DEPOSIT = 1;
  CLAIM_TYPE_WITHDRAW = 2;
  CLAIM_TYPE_ORIGINATED_TOKEN = 3;
  CLAIM_TYPE_VALSET_UPDATED = 4;
}